--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -9,11 +9,12 @@
   user-select: none;
 
   &--bold {
-    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
   }
 
   &__description {
-    font-family: "Montserrat", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
     font-size: 0.75rem;
     line-height: 1.2em;
     padding-top: 0.65em;
