--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -6,7 +6,8 @@
 
   &__author {
     padding-top: 0.143em;
-    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
   }
 
   &__date {
