--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -15,7 +15,8 @@
     line-height: 40px;
 
     &--current {
-      font-family: "Montserrat Bold", Arial, sans-serif;
+      font-family: Montserrat, Arial, sans-serif;
+      font-weight: bold;
       cursor: default;
     }
 
