--- a/src/blocks/price/price.scss
+++ b/src/blocks/price/price.scss
@@ -4,7 +4,8 @@
   color: $dark-shade-50;
 
   &--bold {
-    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
   }
 
   &--small {
