--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -6,7 +6,8 @@
 
   &__label {
     width: 100%;
-    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
     font-size: 12px;
     line-height: 15px;
     text-transform: uppercase;
