--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -3,7 +3,7 @@
 .rounded-button {
   display: inline-block;
   position: relative;
-  font-family: Montserrat;
+  font-family: Montserrat, Arial, sans-serif;
   color: $purple;
   border-radius: 22px;
   border: none;
