--- a/src/blocks/additions/additions.scss
+++ b/src/blocks/additions/additions.scss
@@ -13,7 +13,8 @@
   }
 
   &__title {
-    font-family: "Montserrat Bold";
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
   }
 
   &__icon {
