--- a/src/blocks/donut/donut.scss
+++ b/src/blocks/donut/donut.scss
@@ -12,7 +12,8 @@
     position: absolute;
     top: 50px;
     left: 44px;
-    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
     letter-spacing: 0.03rem;
     line-height: 15px;
   }
