--- a/src/blocks/expander/expander.scss
+++ b/src/blocks/expander/expander.scss
@@ -3,7 +3,8 @@
 .expander {
   &__header {
     text-transform: uppercase;
-    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: bold;
     font-size: 0.75rem;
     padding-bottom: 16px;
     color: $dark-shade-100;
