--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,37 +1,35 @@
 @font-face {
-  font-family: 'Montserrat';
-  src: local('Montserrat'),
-  url("../fonts/montserrat-regular/Montserrat-Regular.ttf") format('opentype'),
-  url('../fonts/montserrat-regular/Montserrat-Regular.woff2') format('woff2'),
-  url('../fonts/montserrat-regular/Montserrat-Regular.woff') format('woff'),
-  url('../fonts/montserrat-regular/Montserrat-Regular.svg') format('svg');
+	font-family: 'Montserrat';
+	src: url('../fonts/montserrat/Montserrat-Regular.eot');
+	src: 
+		url('../fonts/montserrat/Montserrat-Regular.woff') format('woff'), 
+		url('../fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
+		url('../fonts/montserrat/Montserrat-Regular.ttf') format('truetype'), 
+		url('../fonts/montserrat/Montserrat-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat Bold';
-  src: local('Montserrat Bold'),
-  url("../fonts/montserrat-bold/Montserrat-Bold.ttf") format('opentype'),
-  url('../fonts/montserrat-bold/Montserrat-Bold.woff2') format('woff2'),
-  url('../fonts/montserrat-bold/Montserrat-Bold.woff') format('woff'),
-  url('../fonts/montserrat-bold/Montserrat-Bold.svg') format('svg');
+	font-family: 'Montserrat';
+	src: url('../fonts/montserrat/Montserrat-Bold.eot');
+	src: 
+		url('../fonts/montserrat/Montserrat-Bold.woff') format('woff'), 
+		url('../fonts/montserrat/Montserrat-Bold.woff2') format('woff2'), 
+		url('../fonts/montserrat/Montserrat-Bold.ttf') format('truetype'), 
+		url('../fonts/montserrat/Montserrat-Bold.svg') format('svg');
+	font-weight: bold;
+	font-style: normal;
 }
 
 @font-face {
-  font-family: "Quicksand Bold";
-  src: url("../fonts/quicksand-bold/Quicksand-Bold.svg") format("svg"),
-    url("../fonts/quicksand-bold/Quicksand-Bold.ttf") format("truetype"),
-    url("../fonts/quicksand-bold/Quicksand-Bold.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Quicksand Regular";
-  src: url("../fonts/quicksand-regular/Quicksand-Regular.svg") format("svg"),
-    url("../fonts/quicksand-regular/Quicksand-Regular.ttf") format("truetype"),
-    url("../fonts/quicksand-regular/Quicksand-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'Quicksand';
+	src:
+		url('../fonts/quicksand/Quicksand-Bold.woff2') format('woff2'),
+		url('../fonts/quicksand/Quicksand-Bold.ttf') format('truetype'), 
+		url('../fonts/quicksand/Quicksand-Bold.svg') format('svg');
+	font-weight: bold;
+	font-style: normal;
 }
 
 @font-face {
