change px to rem in font-size

--- a/src/blocks/color/color.scss
+++ b/src/blocks/color/color.scss
@@ -3,7 +3,7 @@
 .color {
   display: flex;
   padding-bottom: 20px;
-  font-size: 19px;
+  font-size: 1.1875rem;
   line-height: 29px;
 
   &__box {
