--- a/src/blocks/like/like.scss
+++ b/src/blocks/like/like.scss
@@ -9,7 +9,7 @@
   padding: 3px 11px 3px 21px;
   border-radius: 10px;
   margin: 1px;
-  font-size: 10px;
+  font-size: .625rem;
   line-height: 12px;
   user-select: none;
 
@@ -20,7 +20,7 @@
     font-family: "Material Icons";
     font-weight: normal;
     font-style: normal;
-    font-size: 10px;
+    font-size: .625rem;
     display: inline-block;
     line-height: 1;
     text-transform: none;
