--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -40,7 +40,7 @@
       content: "\e5c8";
       font-family: "Material Icons";
       color: $white;
-      font-size: 24px;
+      font-size: 1.5rem;
     }
   }
 }
