--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -49,7 +49,7 @@
   &__slider {
     position: relative;
     top: -16px;
-    font-size: 12px;
+    font-size: .75rem;
     color: $dark-shade-50;
     font-family: Montserrat;
     line-height: 24px;
