--- a/src/blocks/configuration-dropdown/configuration-dropdown.scss
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.scss
@@ -15,7 +15,7 @@
     position: relative;
     color: $dark-shade-75;
     line-height: 1.715em;
-    padding: 0.57em 0 0.715em 1em;
+    padding: 0.57em 1.6rem 0.715em 1em;
     border: 1px solid $dark-shade-25;
     border-radius: 0.14em 0.14em 0 0;
     user-select: none;
@@ -24,7 +24,7 @@
     &::after {
       content: "\e313";
       font-family: "Material Icons";
-      font-size: 24px;
+      font-size: 1.5rem;
       position: absolute;
       right: 9px;
       top: 10px;
