--- a/src/blocks/gallery/gallery.scss
+++ b/src/blocks/gallery/gallery.scss
@@ -10,7 +10,7 @@
     top: 0;
     width: 44px;
     height: 97%;
-    font-size: 24px;
+    font-size: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
