--- a/src/blocks/menu-toggle/menu-toggle.scss
+++ b/src/blocks/menu-toggle/menu-toggle.scss
@@ -10,7 +10,7 @@
     content: "\2261";
     color: $dark-shade-50;
     display: block;
-    font-size: 40px;
+    font-size: 2.5rem;
     width: 40px;
     height: 40px;
   }
