--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -39,7 +39,7 @@
       position: absolute;
       content: "\e313";
       font-family: "Material Icons";
-      font-size: 24px;
+      font-size: 1.5rem;
       width: 24px;
       height: 21px;
       line-height: 40px;
@@ -91,7 +91,7 @@
         position: absolute;
         content: "\e313";
         font-family: "Material Icons";
-        font-size: 24px;
+        font-size: 1.5rem;
         width: 24px;
         height: 21px;
         line-height: 22px;
