--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -8,7 +8,7 @@
     width: 100%;
     font-family: Montserrat, Arial, sans-serif;
     font-weight: bold;
-    font-size: 12px;
+    font-size: .75rem;
     line-height: 15px;
     text-transform: uppercase;
     color: $dark-shade-100;
@@ -26,7 +26,7 @@
     &::after {
       position: absolute;
       font-family: "Material Icons";
-      font-size: 24px;
+      font-size: 1.5rem;
       content: "\e313";
       text-align: center;
       line-height: 58px;
