--- a/src/blocks/rating/rating.scss
+++ b/src/blocks/rating/rating.scss
@@ -8,7 +8,7 @@
     font-family: "Material Icons";
     font-weight: normal;
     font-style: normal;
-    font-size: 24px;
+    font-size: 1.5rem;
     display: inline-block;
     line-height: 1;
     text-transform: none;
