--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -33,7 +33,7 @@
   font-family: Montserrat, Arial, sans-serif;
   position: relative;
   top: -20px;
-  font-size: 12px;
+  font-size: .75rem;
   line-height: 15px;
   text-transform: uppercase;
   text-align: right;
