--- a/src/blocks/socials/socials.scss
+++ b/src/blocks/socials/socials.scss
@@ -8,7 +8,7 @@
     font-family: "Font Awesome";
     width: 28px;
     height: 24px;
-    font-size: 24px;
+    font-size: 1.5rem;
     cursor: pointer;
     margin: 0 8px;
     background: $gradient;
