change px to rem in line-height

--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -6,7 +6,7 @@
   background-image: $gradient;
   border-radius: 22px;
   padding: 8px 20px;
-  line-height: 24px;
+  line-height: 1.5rem;
   text-transform: uppercase;
   font-size: 0.75rem;
   font-weight: bold;
