--- a/src/blocks/color/color.scss
+++ b/src/blocks/color/color.scss
@@ -4,7 +4,7 @@
   display: flex;
   padding-bottom: 20px;
   font-size: 1.1875rem;
-  line-height: 29px;
+  line-height: 1.8125rem;
 
   &__box {
     min-width: 70px;
