--- a/src/blocks/donut/donut.scss
+++ b/src/blocks/donut/donut.scss
@@ -15,7 +15,7 @@
     font-family: Montserrat, Arial, sans-serif;
     font-weight: bold;
     letter-spacing: 0.03rem;
-    line-height: 15px;
+    line-height: .9375rem;
   }
 
   h1 {
