--- a/src/blocks/light-footer/light-footer.scss
+++ b/src/blocks/light-footer/light-footer.scss
@@ -11,7 +11,7 @@
   &__content {
     padding: 16px 0 25px;
     text-align: center;
-    line-height: 24px;
+    line-height: 1.5rem;
     max-width: 560px;
   }
 }
