--- a/src/blocks/like/like.scss
+++ b/src/blocks/like/like.scss
@@ -10,7 +10,7 @@
   border-radius: 10px;
   margin: 1px;
   font-size: .625rem;
-  line-height: 12px;
+  line-height: .75rem;
   user-select: none;
 
   &__icon {
@@ -22,7 +22,7 @@
     font-style: normal;
     font-size: .625rem;
     display: inline-block;
-    line-height: 1;
+    line-height: .7rem;
     text-transform: none;
 
     &--liked {
