--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -7,7 +7,7 @@
     display: inline-block;
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 2.5rem;
     text-align: center;
     vertical-align: bottom;
     text-decoration: none;
@@ -28,7 +28,7 @@
   &__next {
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 2.5rem;
     text-align: center;
     vertical-align: bottom;
     border-radius: 50%;
