--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -9,7 +9,7 @@
     font-family: Montserrat, Arial, sans-serif;
     font-weight: bold;
     font-size: .75rem;
-    line-height: 15px;
+    line-height: .9375rem;
     text-transform: uppercase;
     color: $dark-shade-100;
 
@@ -29,7 +29,7 @@
       font-size: 1.5rem;
       content: "\e313";
       text-align: center;
-      line-height: 58px;
+      line-height: 3.625rem;
       color: $dark-shade-50;
       top: 0;
       right: 0;
@@ -43,7 +43,7 @@
     border: 1px solid $dark-shade-25;
     border-radius: 4px;
     font-size: 0.875rem;
-    line-height: 18px;
+    line-height: 1.125rem;
     padding-left: 15px;
     padding-top: 13px;
     padding-bottom: 13px;
