--- a/src/blocks/subscription/subscription.scss
+++ b/src/blocks/subscription/subscription.scss
@@ -10,7 +10,7 @@
     top: 0;
     right: 0;
     font-size: 1.5rem;
-    line-height: 1.96em;
+    line-height: 1.96rem;
     text-align: center;
     width: 2em;
     height: 2em;
