--- a/src/blocks/type/type.scss
+++ b/src/blocks/type/type.scss
@@ -12,17 +12,17 @@
 
     &--big {
       font-size: 1.5rem;
-      line-height: 1.2em;
+      line-height: 1.2rem;
     }
 
     &--middle {
       font-size: 1.1875rem;
-      line-height: 1.21em;
+      line-height: 1.21rem;
     }
 
     &--small {
       font-size: 0.75rem;
-      line-height: 0.8em;
+      line-height: 0.8rem;
     }
   }
 
