--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -52,7 +52,7 @@
     font-size: .75rem;
     color: $dark-shade-50;
     font-family: Montserrat;
-    line-height: 24px;
+    line-height: 1.5rem;
   }
 
   &--index-100 {
