--- a/src/blocks/card-footer/card-footer.scss
+++ b/src/blocks/card-footer/card-footer.scss
@@ -7,6 +7,6 @@
   width: 100%;
   justify-content: space-between;
   align-items: baseline;
-  line-height: 18px;
+  line-height: 1.125rem;
   color: $black;
 }
