--- a/src/blocks/configuration-dropdown/configuration-dropdown.scss
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.scss
@@ -95,7 +95,7 @@
     border-radius: 50%;
     text-align: center;
     font-size: 1.285rem;
-    line-height: 30px;
+    line-height: 1.875rem;
     user-select: none;
     cursor: pointer;
 
