--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 442px;
   background-color: $white;
-  line-height: 24px;
+  line-height: 1.5rem;
   padding-top: 100px;
 
   &__container {
@@ -30,7 +30,7 @@
   &__link {
     display: block;
     margin: 20px 0;
-    line-height: 17px;
+    line-height: 1.0625rem;
   }
 
   &__bottom {
