--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -8,6 +8,6 @@
   border: 1px solid $dark-shade-25;
   border-radius: 50%;
   text-align: center;
-  line-height: 20px;
+  line-height: 1.25rem;
   cursor: pointer;
 }
