--- a/src/blocks/invoice/invoice.scss
+++ b/src/blocks/invoice/invoice.scss
@@ -1,7 +1,7 @@
 @import "../../scss/colors.scss";
 
 .invoice {
-  line-height: 24px;
+  line-height: 1.5rem;
 
   &__row {
     display: flex;
@@ -44,7 +44,7 @@
       border-radius: 50%;
       width: 20px;
       height: 20px;
-      line-height: 20px;
+      line-height: 1.25rem;
       text-align: center;
     }
   }
