--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -26,7 +26,7 @@
     font-style: normal;
     font-size: 1.5rem;
     display: inline-block;
-    line-height: 1;
+    line-height: .7rem;
     text-transform: none;
   }
 }
