--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -12,7 +12,7 @@
 
   &__item {
     text-align: center;
-    line-height: 40px;
+    line-height: 2.5rem;
 
     &--current {
       font-family: Montserrat, Arial, sans-serif;
@@ -42,7 +42,7 @@
       font-size: 1.5rem;
       width: 24px;
       height: 21px;
-      line-height: 40px;
+      line-height: 2.5rem;
       top: 0;
       right: 10px;
     }
@@ -76,7 +76,7 @@
       cursor: pointer;
       padding: 10px 15px;
       border: none;
-      line-height: 20px;
+      line-height: 1.25rem;
     }
 
     &__submenu {
@@ -94,7 +94,7 @@
         font-size: 1.5rem;
         width: 24px;
         height: 21px;
-        line-height: 22px;
+        line-height: 1.375rem;
         top: 10px;
         right: 0;
       }
