--- a/src/blocks/rating/rating.scss
+++ b/src/blocks/rating/rating.scss
@@ -10,7 +10,7 @@
     font-style: normal;
     font-size: 1.5rem;
     display: inline-block;
-    line-height: 1;
+    line-height: 1rem;
     text-transform: none;
     background: $gradient;
     -webkit-background-clip: text;
