--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -10,7 +10,7 @@
   padding: 8px 18px;
   text-transform: uppercase;
   font-size: 0.75rem;
-  line-height: 24px;
+  line-height: 1.5rem;
   font-weight: bold;
   cursor: pointer;
   user-select: none;
