--- a/src/blocks/text-field/text-field.scss
+++ b/src/blocks/text-field/text-field.scss
@@ -5,7 +5,7 @@
   border: 1px solid $dark-shade-25;
   border-radius: 4px;
   font-size: 0.875rem;
-  line-height: 18px;
+  line-height: 1.125rem;
   padding: 13px 15px 13px 15px;
   width: 100%;
 
