--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -16,7 +16,7 @@ body {
   font-family: "Montserrat", Arial, sans-serif;
   margin-top: 3em;
   font-size: 0.875rem;
-  line-height: 20px;
+  line-height: 1.5rem;
   padding: 0;
   margin: 0;
   height: 100%;
@@ -44,7 +44,7 @@ h2 {
   font-family: Quicksand, Arial, sans-serif;
   font-weight: bold;
   font-size: 1.1875rem;
-  line-height: 1.22em;
+  line-height: 1.5rem;
   color: #1f2041;
 }
 
@@ -52,7 +52,7 @@ h3 {
   font-family: Montserrat, Arial, sans-serif;
   font-weight: bold;
   font-size: 0.75rem;
-  line-height: 1.1em;
+  line-height: 1.1rem;
   color: $dark-shade-100;
   text-transform: uppercase;
 }
@@ -63,7 +63,7 @@ h3 {
   font-style: normal;
   font-size: 1.5rem;
   display: inline-block;
-  line-height: 1;
+  line-height: 1rem;
   text-transform: none;
   letter-spacing: normal;
   word-wrap: normal;
