Change responsive in header

--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -12,5 +12,7 @@ mixin header(obj)
           .header__enter-button
             button.rounded-button= obj.buttons.enter
           .button= obj.buttons.register
-      .header__toggle
-        button.menu-toggle#menu_toggle
+      
+      button.header__enter-toggle.icon-button account_box
+      
+      button.header__menu-toggle.icon-button#menu_toggle menu
