--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -5,14 +5,15 @@
   color: $white;
   background-image: $gradient;
   border-radius: 22px;
-  padding: 8px 20px;
-  line-height: 1.5rem;
+  padding: 0 20px;
+  line-height: 34px;
   text-transform: uppercase;
   font-size: 0.75rem;
   font-weight: bold;
   cursor: pointer;
   user-select: none;
   border: none;
+  height: 34px;
 
   &--disabled {
     opacity: 0.5;
