--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -9,59 +9,58 @@
   &__container {
     display: flex;
     align-items: center;
-    height: 100%;
-    margin: auto 0;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    height: 70px;
+
+    @media (max-width: 992px) {
+      justify-content: center;
+    }
   }
 
   &__logo {
     margin-right: auto;
   }
 
-  &__menu {
-    position: absolute;
-    top: 44px;
-    left: 10px;
-    right: 10px;
+  &__menu-toggle {
+    display: none;
+
+    @media (max-width: 767px) {
+      display: block;
+    }
+  }
+
+  &__enter-toggle {
+    display: none;
+    padding: 0 10px;
+
+    @media (max-width: 992px) {
+      display: block;
+    }
   }
 
   &__enter-panel {
+    padding-left: 20px;
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 992px) {
+      display: none;
+    }
   }
 
   &__enter-button {
-    margin-right: 20px;
+    margin-right: 22px;
   }
 
-  &__account {
-    margin: 0 auto;
-  }
-}
+  &__menu {
+    min-width: 352px;
 
-@media screen and (min-width: $small-size) {
-  .header {
-    height: 70px;
-
-    &__container {
-      flex-direction: row;
-      max-width: 1160px;
-      margin: 0 auto;
-    }
-
-    &__menu {
-      position: static;
-      width: auto;
-      padding-right: 14px;
-    }
-
-    &__account {
-      border-left: 1px solid $dark-shade-10;
-      color: $dark-shade-50;
-      padding: 8px 0 4px 30px;
-    }
-
-    &__toggle {
-      display: none;
+    @media (max-width: 767px) {
+      position: absolute;
+      top: 0;
+      bottom: 0;
     }
   }
 }
