--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -3,14 +3,16 @@
 .rounded-button {
   display: inline-block;
   position: relative;
+  top: 2px;
   font-family: Montserrat, Arial, sans-serif;
   color: $purple;
   border-radius: 22px;
   border: none;
-  padding: 8px 18px;
+  padding: 0 18px;
   text-transform: uppercase;
   font-size: 0.75rem;
-  line-height: 1.5rem;
+  height: 30px;
+  line-height: 30px;
   font-weight: bold;
   cursor: pointer;
   user-select: none;
