--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,21 +1,20 @@
 @import "../../scss/sizes.scss";
 
 .landing {
-  max-width: 1160px;
+  max-width: 1200px;
+  padding: 0 20px;
   margin: 0 auto;
-
+  
   &__room-config {
     position: absolute;
     top: 140px;
-    left: calc(50% - 380px / 2);
+    
     z-index: 1;
-  }
-}
+    left: auto;
 
-@media screen and (min-width: $small-size) {
-  .landing {
-    &__room-config {
-      left: auto;
+    @media (max-width: 767px) {
+      left: calc(50% - 380px / 2);
     }
   }
 }
+
