--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -3,11 +3,10 @@
 .hero {
   position: relative;
   background-image: url("../img/image_3.png");
-  width: 100%;
-  min-height: 200px;
-  background-position: center;
+  min-height: 830px;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position-x: center;
+  background-position-y: -70px;
 
   &--img2 {
     background-image: url("../img/image_4.png");
@@ -17,20 +16,8 @@
     position: absolute;
     width: 297px;
     height: 48px;
-    text-align: center;
-    bottom: 70%;
-    right: 20%;
-  }
-}
-
-@media screen and (min-width: $small-size) {
-  .hero {
-    min-height: 900px;
-
-    &__text {
-      text-align: right;
-      bottom: 18px;
-      right: 70px;
-    }
+    text-align: right;
+    bottom: 20px;
+    right: 88px;
   }
 }
