--- a/src/blocks/find-apartments-card/find-apartments-card.scss
+++ b/src/blocks/find-apartments-card/find-apartments-card.scss
@@ -2,9 +2,13 @@
   width: 380px;
   height: 374px;
 
+  &__body {
+    padding-top: 4px;
+  }
+
   &__item {
     position: relative;
-    margin: 20px 0;
+    margin: 16px 0;
     z-index: 3;
 
     &--primary {
