--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -7,8 +7,10 @@
   color: $white;
   background-image: $gradient;
   border: none;
+  height: 44px;
+  line-height: 44px;
   border-radius: 22px;
-  padding: 16px 18px;
+  padding: 0 18px;
   text-transform: uppercase;
   font-size: 0.75rem;
   font-weight: bold;
