--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -21,7 +21,7 @@
   &__wrapper {
     display: block;
     position: relative;
-    padding-top: 4px;
+    padding-top: 6px;
 
     &::after {
       position: absolute;
@@ -45,9 +45,8 @@
     font-size: 0.875rem;
     line-height: 1.125rem;
     padding-left: 15px;
-    padding-top: 13px;
-    padding-bottom: 13px;
     width: 100%;
+    height: 44px;
 
     &::placeholder {
       color: $dark-shade-25;
