--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -33,7 +33,7 @@ h6 {
 }
 
 h1 {
-  font-family: Quicksand, Arial, sans-serif;
+  font-family: Quicksand, Montserrat, Arial, sans-serif;
   font-weight: bold;
   font-size: 1.5rem;
   line-height: 1.25em;
