--- a/src/blocks/light-footer/light-footer.pug
+++ b/src/blocks/light-footer/light-footer.pug
@@ -1,5 +1,5 @@
 mixin light-footer()
-  footer.light-footer
+  footer.light-footer.wrapper
     .site-logo
     .light-footer__content
       | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
