--- a/src/blocks/light-footer/light-footer.scss
+++ b/src/blocks/light-footer/light-footer.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px 0 110px;
+  padding-top: 100px;
+  padding-bottom: 110px;
 
   &__content {
     padding: 16px 0 25px;
