--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -3,28 +3,58 @@
 
 .footer {
   width: 100%;
-  height: 442px;
   background-color: $white;
   line-height: 1.5rem;
   padding-top: 100px;
 
+  &__text {
+    margin-top: 17px;
+  }
+
   &__container {
     display: flex;
-    justify-content: space-between;
-    max-width: 1160px;
+    //justify-content: space-between;
     margin: 0 auto 84px;
+
+    @media (max-width: 992px) {
+      justify-content: space-around;
+    }
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+      align-items: center;
+      height: auto;
+    }
   }
 
   &__block {
     width: 260px;
 
+    @media (max-width: 992px) {
+      padding-bottom: 30px;
+
+      &:last-child {
+        padding-bottom: 0;
+      }
+    }
+
     &__header {
-      margin-bottom: 26px;
+      margin-bottom: 22px;
+      margin-top: 2px;
+    }
+  }
+
+  &__nav-container {
+    display: flex;
+    margin-left: 40px;
+
+    @media (max-width: 992px) {
+      display: none;
     }
   }
 
   &__nav {
-    width: 160px;
+    width: 200px;
   }
 
   &__link {
@@ -33,16 +63,19 @@
     line-height: 1.0625rem;
   }
 
-  &__bottom {
+  &__line {
     border-top: 1px solid $dark-shade-25;
+    padding: 10px 0;
   }
 
   &__copy {
     display: flex;
     justify-content: space-between;
-    max-width: 1160px;
-    margin: 0 auto;
     align-items: baseline;
-    padding: 10px 0;
+
+    @media (max-width: 767px) {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
   }
 }
