--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -75,3 +75,9 @@ a {
   text-decoration: none;
   color: $dark-shade-50;
 }
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
