refactor wrapper class, added wrapper to colors&fonts page

--- a/src/pages/colors-type/colors-and-fonts.pug
+++ b/src/pages/colors-type/colors-and-fonts.pug
@@ -5,7 +5,7 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     img.logo(src="../img/logo.svg", alt="logo")
-    .color-types
+    .color-types.wrapper
       .palette.color-types__pallete
         .color
           .color__box.color__box--dark-shade-100
