--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -78,6 +78,8 @@ a {
 
 .wrapper {
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
