--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -60,7 +60,7 @@ html
         +header({isLogged: true, menu: menu})
       .headers-footers__item.headers-footers__item--down
         include ../../blocks/footer/footer.pug 
-        +footer()
+        +footer({})
       .headers-footers__item
         include ../../blocks/light-footer/light-footer.pug 
         +light-footer()
