--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -73,4 +73,40 @@ html
     block footer
       .main-layout__footer
         include ../../blocks/footer/footer.pug 
-        +footer()
+        +footer({
+          main: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»',
+          navigation: [
+            {
+              title: 'Навигация',
+              links: [
+                { url: 'index.html', text: 'О нас' },
+                { url: 'index.html', text: 'Новости' },
+                { url: 'index.html', text: 'Служба поддержки' },
+                { url: 'index.html', text: 'Услуги' },
+              ]
+            },
+            {
+              title: 'О нас',
+              links: [
+                { url: 'index.html', text: 'О сервисе' },
+                { url: 'index.html', text: 'Наша команда' },
+                { url: 'index.html', text: 'Вакансии' },
+                { url: 'index.html', text: 'Инвесторы' },
+              ]
+            },
+            {
+              title: 'Служба поддержки',
+              links: [
+                { url: 'index.html', text: 'Соглашения' },
+                { url: 'index.html', text: 'Сообщества' },
+                { url: 'index.html', text: 'Связь с нами' },
+              ]
+            },
+          ],
+          copy: 'Copyright © 2018 Toxin отель. Все права зачищены.',
+          subscription: {
+            title: 'Подписка',
+            text: 'Получайте специальные предложения и новости сервиса',
+            placeholder: 'Email'
+          }
+        })
