#2 change adaptive in search-room page

--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -4,7 +4,7 @@ block title
   title Search Room
 
 block content
-  .search-room
+  .search-room.wrapper
     sidebar.search-room__sidebar
       form(action="index.html", method="post")
         include ../../blocks/checkbox/checkbox 
