--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -3,8 +3,7 @@
 
 .search-room {
   display: grid;
-  max-width: 1160px;
-  margin: 30px auto 0;
+  margin-top: 30px;
   gap: 1em;
   justify-items: center;
 
