#2 change adaptive in room-details page

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -10,7 +10,7 @@ block content
     '../img/hero_galery/image_2.png',
     '../img/hero_galery/image_3.png'
   ])
-  .room-details
+  .room-details.wrapper
     .room-details__info
       .room-details__room-item
         h2.room-details__title Сведения о номере
