--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -2,24 +2,30 @@
 
 .room-details {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 2fr 1fr;
   column-gap: 70px;
   row-gap: 30px;
   max-width: 1160px;
   margin: 70px auto 0;
 
-  @media screen and (min-width: $middle-size) {
-    grid-template-columns: 2fr 1fr;
+  @media screen and (max-width: 1248px) {
+    grid-template-columns: 1fr;
   }
 
   &__info {
     display: grid;
     column-gap: 70px;
     row-gap: 30px;
+
+    @media (max-width: 767px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__room-item {
-    min-width: 220px;
+    min-width: 320px;
   }
 
   &__room-comments {
