#1 added pp screenshot for registration page and bug fix on it page

--- a/src/blocks/card-footer/card-footer.pug
+++ b/src/blocks/card-footer/card-footer.pug
@@ -2,4 +2,4 @@ mixin card-footer(text, buttonText)
   .card-footer
     .card-footer__left= text
     .card-footer__right
-    button.rounded-button= buttonText
+    button.rounded-button.rounded-button--large= buttonText
