--- a/src/blocks/radio/radio.scss
+++ b/src/blocks/radio/radio.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   position: relative;
   padding-left: 2.3em;
-  padding-right: 1em;
+  padding-right: 10px;
   user-select: none;
   cursor: pointer;
 
@@ -16,8 +16,8 @@
 
   &__mark {
     position: absolute;
-    top: 0.06em;
-    left: 0.125em;
+    top: 2px;
+    left: 2px;
     width: 20px;
     height: 20px;
     border-radius: 50%;
