added pp screenshot from search-room page

--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -14,6 +14,8 @@
 
   &__header {
     grid-column: 1/-1;
+    line-height: 1;
+    padding-top: 6px;
   }
 
   &__pagination {
@@ -22,7 +24,7 @@
   }
 
   &__sidebar {
-    min-width: 266px;
+    max-width: 266px;
   }
 
   &__sidebar-item-title {
@@ -38,11 +40,15 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(272px, 1fr));
     row-gap: 2em;
-    column-gap: 1em;
+    column-gap: 8px;
+    margin-left: 26px;
   }
 
   &__room-card {
-    justify-self: center;
+
+    @media (max-width: 992px) {
+      justify-self: center;
+    }
   }
 
   &__slider {
