#2 change responsive in footer and bug fix

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -35,7 +35,7 @@ block content
         })
       .room-details__room-item
         h2.room-details__title Впечатления от номера
-        .statistic
+        .statistic.room-details__statistic
           div(class="donut statistic__donut" data-donut='[{"value": 65, "color": "#BC9CFF", "bold": true}, {"value": 65, "color": "#6FCF97"}, {"value": 130, "color": "#FFE39C"}]')
 
           ul.bullet.statistic__list
@@ -61,7 +61,7 @@ block content
           like: { likes: 2, liked: false },
           text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент'
         })
-      .room-details__room-item
+      .room-details__room-item.room-details__room-item--bottom
         h2.room-details__title Правила
         include ../../blocks/bullet/bullet 
         +bullet([
@@ -69,7 +69,7 @@ block content
           'Без вечеринок и мероприятий',
           'Время прибытия — после 13:00, а выезд до 12:00'
         ])
-      .room-details__room-item
+      .room-details__room-item.room-details__room-item--bottom
         h2.room-details__title Отмена
         p.room-details__text Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
     .room-details__booking
