--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -6,6 +6,7 @@
   background-color: $white;
   line-height: 1.5rem;
   padding-top: 100px;
+  box-shadow: inset 0px 1px 0px rgba(31, 32, 65, 0.1);
 
   &__text {
     margin-top: 17px;
@@ -13,7 +14,6 @@
 
   &__container {
     display: flex;
-    //justify-content: space-between;
     margin: 0 auto 84px;
 
     @media (max-width: 992px) {
