--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -6,7 +6,7 @@
   min-height: 702px;
   background-repeat: no-repeat;
   background-position-x: center;
-  background-position-y: -70px;
+  //background-position-y: -70px;
 
   &--img2 {
     background-image: url("../img/image_4.png");
