--- a/src/pages/main-layout/main-layout.scss
+++ b/src/pages/main-layout/main-layout.scss
@@ -1,8 +1,8 @@
 .main-layout {
   &__footer {
     position: absolute;
-    //height: 442px;
     left: 0;
     right: 0;
+    margin-top: 60px;
   }
 }
