--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -5,8 +5,7 @@
   grid-template-columns: 2fr 1fr;
   column-gap: 70px;
   row-gap: 30px;
-  max-width: 1160px;
-  margin: 70px auto 0;
+  margin-top: 78px;
 
   @media screen and (max-width: 1248px) {
     grid-template-columns: 1fr;
@@ -15,7 +14,7 @@
   &__info {
     display: grid;
     column-gap: 70px;
-    row-gap: 30px;
+    row-gap: 12px;
 
     @media (max-width: 767px) {
       display: flex;
@@ -25,20 +24,26 @@
   }
 
   &__room-item {
-    min-width: 320px;
+    max-width: 280px;
+
+    &--bottom {
+      margin-top: 24px;
+      max-width: 320px;
+    }
   }
 
   &__room-comments {
+    margin-top: 0px;
     grid-column: 1/3;
   }
 
   &__inner {
-    padding-bottom: 23px;
+    padding-bottom: 20px;
   }
 
   &__text {
     font-size: 0.875rem;
-    line-height: 1.714rem;
+    line-height: 1.5rem;
   }
 
   &__booking {
@@ -48,6 +53,12 @@
   }
 
   &__title {
-    margin-bottom: 23px;
+    margin-bottom: 20px;
+  }
+
+  &__statistic {
+    position: relative;
+    top: -14px;
+    left: -8px;
   }
 }
