material icons size bug fix

--- a/src/blocks/additions/additions.pug
+++ b/src/blocks/additions/additions.pug
@@ -5,4 +5,4 @@ mixin additions(data)
   .additions(class=noBorder)
     .additions__title= data.title
     div= data.desc
-    i.material-icons.additions__icon= data.icon
+    i.additions__icon.material-icons= data.icon
