change background color for cards and headers-footers pages

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Card Kit
-  body
+  body.body--kit
     img.cards__logo(src="../img/logo.svg", alt="logo")
     .cards
       .cards__column
