--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Headers and Footer
-  body
+  body.body--kit
     - 
       var menu = [{
         text: 'Home',
