#4 change class name for masked text fields

--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -6,9 +6,9 @@
   visibility: hidden;
 }
 
-@import "./internals/datepicker.scss";
-@import "./internals/navigation.scss";
-@import "./internals/cell.scss";
+// @import "./internals/datepicker.scss";
+// @import "./internals/navigation.scss";
+// @import "./internals/cell.scss";
 
 .datepicker {
   font-family: Montserrat, Arial, sans-serif;
