--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -11,7 +11,7 @@ mixin register-card()
           +radio('Женщина', 'gender')
         .register-card__block
           h3.register-card__label Дата рождения
-          input.text-field(placeholder="ДД.ММ.ГГГГ")#birthday
+          input.text-field(placeholder="ДД.ММ.ГГГГ").js-masked
         .register-card__block
           h3.register-card__label Данные для входа в сервис
           input.text-field(placeholder="Email").register-card__item
