--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -26,7 +26,7 @@ html
           .form-elements__head
             .form-elements__title Masked text field
             .form-elements__desc Default
-          input#birthday.text-field(placeholder='ДД.ММ.ГГГГ')
+          input.text-field(placeholder='ДД.ММ.ГГГГ').js-masked
 
         include ../../blocks/range-dates/range-dates
         .form-elements__item.form-elements__item--big-space
