--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -6,9 +6,9 @@
   visibility: hidden;
 }
 
-// @import "./internals/datepicker.scss";
-// @import "./internals/navigation.scss";
-// @import "./internals/cell.scss";
+@import "../../../node_modules/air-datepicker/src/sass/datepicker.scss";
+@import "../../../node_modules/air-datepicker/src/sass/navigation.scss";
+@import "../../../node_modules/air-datepicker/src/sass/cell.scss";
 
 .datepicker {
   font-family: Montserrat, Arial, sans-serif;
