--- a/src/blocks/range-dates/range-dates.pug
+++ b/src/blocks/range-dates/range-dates.pug
@@ -1,5 +1,6 @@
 mixin range-dates(data)
   .range-dates
+    input.js-calendar.js-hidden.calendar
     label.range-dates__label.range-dates__label--small= data.firstLabel
       span.range-dates__wrapper
         input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ" id=data.firstInputId)
