--- a/src/blocks/configuration-dropdown/configuration-dropdown.scss
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.scss
@@ -2,10 +2,11 @@
 
 .configuration-dropdown {
   position: relative;
+  font-family: Montserrat, Arial, sans-serif;
 
   &__label {
     text-transform: uppercase;
-    font-family: Montserrat, Arial, sans-serif;
+    
     font-weight: bold;
     font-size: 0.75rem;
     color: $dark-shade-100;
@@ -20,15 +21,17 @@
     border-radius: 0.14em 0.14em 0 0;
     user-select: none;
     cursor: pointer;
+    font-family: Montserrat, Arial, sans-serif;
+    font-size: .875rem;
+    width: 100%;
 
-    &::after {
-      content: "\e313";
-      font-family: "Material Icons";
+    &-icon {
       font-size: 1.5rem;
       position: absolute;
-      right: 9px;
+      right: 10px;
       top: 10px;
       color: $dark-shade-75;
+      cursor: pointer;
     }
   }
 
