change dropdown in search-room page

--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -16,7 +16,7 @@ html
     block title
       title Main
   body
-    block header
+    block header.main-layout__header
       include ../../blocks/header/header.pug 
       +header({
       isLogged: false, 
