--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -36,6 +36,10 @@
     margin-bottom: 30px;
   }
 
+  &__last-item {
+    margin-top: 30px;
+  }
+
   &__content {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(272px, 1fr));
